# CryptoDisplay

./: README.md
RaspberryProject/: CMakeLists.txt  LICENSE  README.md  config.json  sentry.sh
RaspberryProject/include/: cryptoAPI.h  mockData.h
RaspberryProject/src/: cryptoAPI.cpp  main.cpp
